# wasabi

./: .clang-format  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  config  main
cmd/: main.c
contracts/: README.md  SimpleStorage.asm  opcodes
doc/: README.md
docs/: 00 - index.md  00 - introduction.md  README.md  Readme.md  storage.asm
include/: uevm.h
include/internal/: math.h  math_big_int.h  math_big_uint.h  test.h
include/uevm/: api.h  config.h  types.h  uevm.h
src/: Makefile  bigint.c  bigint.h  bigint_test.c  eevm.c  eevm.h  main.c  math.c  math.h  opcodes.h  simple_test.c  uevm.c
src/core/: math.c  math.h  test.h
src/internal/: math.c  math.h  math_big_uint.c  test.h
tests/: Makefile  VMTester.go  test_runner  test_runner.c  test_runner.go  test_util.c  test_util.h  uevm_test  uevm_test.c  uevm_tests.c
